@@ -7,96 +7,104 @@ import com.pricetracker.mapper.ProductMapper;
 import com.pricetracker.repository.CategoryRepository;
 import com.pricetracker.repository.ProductRepository;
 import jakarta.persistence.EntityNotFoundException;
-import java.util.List;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.List;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
-@Slf4j
-public final class ProductService {
-
+public class ProductService {
 
   private final ProductRepository productRepository;
   private final CategoryRepository categoryRepository;
   private final ProductMapper productMapper;
 
-
-  public ProductDto getProductById(final Long id) {
+  @Transactional(readOnly = true)
+  public ProductDto getProductById(Long id) {
+    log.debug("Fetching product by id: {}", id);
     return productRepository.findById(id)
         .map(productMapper::toDto)
-        .orElseThrow(() -> new EntityNotFoundException(
-            "Product not found with id: " + id));
+        .orElseThrow(() -> new EntityNotFoundException("Product not found with id: " + id));
   }
 
-  public List<ProductDto> getProducts(final String categoryName) {
-    List<Product> products;
+  @Transactional(readOnly = true)
+  public List<ProductDto> getProducts(String categoryName) {
+    log.debug("Fetching products with category: {}", categoryName);
 
     if (categoryName != null && !categoryName.isBlank()) {
-      // Используем метод с @EntityGraph для загрузки категорий одним запросом
-      products = productRepository.findByCategoryName(categoryName);
-      log.info("Загружено {} продуктов с категориями (используя EntityGraph)", products.size());
-    } else {
-      // Используем переопределенный findAll с @EntityGraph
-      products = productRepository.findAll();
-      log.info("Загружено {} всех продуктов с категориями (используя EntityGraph)", products.size());
+      return productRepository.findByCategoryName(categoryName)
+          .stream()
+          .map(productMapper::toDto)
+          .collect(Collectors.toList());
     }
 
-    return products.stream()
+    return productRepository.findAll().stream()
         .map(productMapper::toDto)
-        .toList();
+        .collect(Collectors.toList());
   }
 
   @Transactional
-  public ProductDto saveProduct(final ProductDto dto) {
+  public ProductDto saveProduct(ProductDto dto) {
+    log.debug("Saving new product: {}", dto.name());
+
     Product product = productMapper.toEntity(dto);
 
     if (dto.category() != null) {
-      Category category = findOrCreateCategory(dto.category());
+      Category category = categoryRepository.findByName(dto.category())
+          .orElseGet(() -> {
+            Category newCat = new Category();
+            newCat.setName(dto.category());
+            return categoryRepository.save(newCat);
+          });
       product.setCategory(category);
     }
 
     Product savedProduct = productRepository.save(product);
+    log.info("Product saved successfully with id: {}", savedProduct.getId());
+
     return productMapper.toDto(savedProduct);
   }
 
   @Transactional
-  public ProductDto updateProduct(final Long id, final ProductDto dto) {
+  public ProductDto updateProduct(Long id, ProductDto dto) {
+    log.debug("Updating product with id: {}", id);
+
     Product product = productRepository.findById(id)
-        .orElseThrow(() -> new EntityNotFoundException(
-            "Product not found with id: " + id));
+        .orElseThrow(() -> new EntityNotFoundException("Product not found with id: " + id));
 
     product.setName(dto.name());
     product.setCurrentPrice(dto.price());
 
     if (dto.category() != null) {
-      Category category = findOrCreateCategory(dto.category());
+      Category category = categoryRepository.findByName(dto.category())
+          .orElseGet(() -> {
+            Category newCat = new Category();
+            newCat.setName(dto.category());
+            return categoryRepository.save(newCat);
+          });
       product.setCategory(category);
     } else {
       product.setCategory(null);
     }
 
-    return productMapper.toDto(product); // save не нужен, т.к. внутри транзакции
+    log.info("Product updated successfully with id: {}", id);
+    return productMapper.toDto(product);
   }
 
   @Transactional
-  public void deleteProduct(final Long id) {
-    if (!productRepository.existsById(id)) {
-      throw new EntityNotFoundException(
-          "Cannot delete. Product not found with id: " + id);
-    }
-    productRepository.deleteById(id);
-  }
+  public void deleteProduct(Long id) {
+    log.debug("Deleting product with id: {}", id);
 
-  private Category findOrCreateCategory(String categoryName) {
-    return categoryRepository.findByName(categoryName)
-        .orElseGet(() -> {
-          Category newCat = new Category();
-          newCat.setName(categoryName);
-          return categoryRepository.save(newCat);
-        });
+    if (!productRepository.existsById(id)) {
+      throw new EntityNotFoundException("Product not found with id: " + id);
+    }
+
+    productRepository.deleteById(id);
+    log.info("Product deleted successfully with id: {}", id);
   }
 }
